k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: golang-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: golang-app
  template:
    metadata:
      labels:
        app: golang-app
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: golang-app
        image: vksssd/golang-app:latest
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: golang-app-service
spec: 
  type: NodePort
  selector:
    app: golang-app
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30001

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
